added title- & style- atributes to some tags

--- a/002_HTML_base/index.html
+++ b/002_HTML_base/index.html
@@ -17,12 +17,11 @@
 <!-- <body> - Container which is displayed data in browser -->
 
 <body>
-	<h1>DOCUMENT HEADER</h1>
-	<h2>Basic elements HTML</h2>
+	<h1 title="This is h1">DOCUMENT HEADER</h1>
+	<h2 title="This is h2">Basic elements HTML</h2>
 
-	<h3>Header 3.1 paragraph text example</h3>
-	<p>
-		Paragraph #1:<br />
+	<h3 title="This is h3 (1)">Header 3.1 paragraph text example</h3>
+	<p title="Lorem paragraph">
 		Lorem - is a random genrated text. <br />
 		Lorem, ipsum dolor sit amet consectetur adipisicing elit.<br />
 		Quisquam blanditiis laboriosam incidunt officia distinctio dolorem provident aliquam. Modi, deleniti neque quas
@@ -37,7 +36,7 @@
 		delectus? Id labore nam ipsam. Quam, porro obcaecati?
 	</p>
 
-	<h3>Header 3.2 lists example</h3>
+	<h3 title="This is h3 (2)">Header 3.2 lists example</h3>
 	<!-- <ul>, <ol>, <li> - block tags-->
 
 	<div>
@@ -59,22 +58,20 @@
 		</ol>
 	</div>
 
-	<h3>Header 3.3 span-tag, a-tag and img-tag example</h3>
+	<h3 title="This is h3 (3)">Header 3.3 span-tag, a-tag and img-tag example</h3>
 	<!-- <span> - Uniform tags which are ordered. NOT for block-tags -->
 	<!-- target="_blank" - allows you to open a link in new browser tab -->
 	<div>
-		<span>My GitHub: click</span>
-		<a target="_blank" href="https://github.com/UnderWaterWelder27/HTML-CSS-JS-Learning">HERE</a>
-		<span> to surf the link</span>
+		<span style="color: rgb(255, 248, 230); font-size: 36px;">My GitHub: click</span>
+		<a style="font-size: 36px;" target="_blank" href="https://github.com/UnderWaterWelder27/HTML-CSS-JS-Learning">
+			HERE
+		</a>
+		<span style="color: rgb(255, 248, 230); font-size: 36px;"> to surf the link</span>
 		<div>
-			This is one of my strange photoshop work:
-			<div>
-				<img src="img/abstractive bakugan or motosport icon.jpg" alt="Image not found (">
-			</div>
-			And this is "Image not found ("
-			<div>
-				<img src="" alt="Image not found (">
-			</div>
+			This is one of my strange photoshop work: <br>
+			<img src="img/abstractive bakugan or motosport icon.jpg" alt="Image not found ("> <br>
+			And this is "Image not found (" <br>
+			<img src="" alt="Image not found (">
 		</div>
 	</div>
 </body>
