include hr- & pre- tag

--- a/002_HTML_base/index.html
+++ b/002_HTML_base/index.html
@@ -20,7 +20,9 @@
 	<h1 title="This is h1">DOCUMENT HEADER</h1>
 	<h2 title="This is h2">Basic elements HTML</h2>
 
+	<hr>
 	<h3 title="This is h3 (1)">Header 3.1 paragraph text example</h3>
+	<hr>
 	<p title="Lorem paragraph">
 		Lorem - is a random genrated text. <br />
 		Lorem, ipsum dolor sit amet consectetur adipisicing elit.<br />
@@ -35,10 +37,11 @@
 		adipisicing elit. Libero voluptate ad, dolorum optio adipisci minima, iure in odit, consequuntur aut quo magnam
 		delectus? Id labore nam ipsam. Quam, porro obcaecati?
 	</p>
-
+	<pre title="pre-tag" style="font-size:24px;"> F o r m a t e d   t e x t   e x a m p l e </pre>
+	<hr>
 	<h3 title="This is h3 (2)">Header 3.2 lists example</h3>
+	<hr>
 	<!-- <ul>, <ol>, <li> - block tags-->
-
 	<div>
 		Marked list:
 		<ul>
@@ -58,7 +61,9 @@
 		</ol>
 	</div>
 
+	<hr>
 	<h3 title="This is h3 (3)">Header 3.3 span-tag, a-tag and img-tag example</h3>
+	<hr>
 	<!-- <span> - Uniform tags which are ordered. NOT for block-tags -->
 	<!-- target="_blank" - allows you to open a link in new browser tab -->
 	<div>
